--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="tabs4 cid-skYybPxDUr" id="tabs4-6">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="tabs4 cid-skYybPxDUr" id="tabs4-6">
 
     
 
@@ -54,7 +54,7 @@
 
         <div class="media-container-row mt-5 pt-3">
             <div class="mbr-figure" style="width: 20%;">
-                <img src="assets/images/0103-316x162.png" alt="Mobirise" title="">
+                <img src="assets/images/010302-316x162.jpeg" alt="Mobirise" title="">
             </div>
             <div class="tabs-container">
                 <ul class="nav nav-tabs" role="tablist">
