--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="tabs4 cid-skYybPxDUr" id="tabs4-6">
+<section class="engine"><a href="https://mobirise.info/g">how to build a website for free</a></section><section class="tabs4 cid-skYybPxDUr" id="tabs4-6">
 
     
 
@@ -54,7 +54,7 @@
 
         <div class="media-container-row mt-5 pt-3">
             <div class="mbr-figure" style="width: 20%;">
-                <img src="assets/images/010302-316x162.jpeg" alt="Mobirise" title="">
+                <img src="assets/images/010302-1-316x162.jpeg" alt="Mobirise" title="">
             </div>
             <div class="tabs-container">
                 <ul class="nav nav-tabs" role="tablist">
@@ -138,7 +138,7 @@
             <!--1-->
             <div class="row timeline-element reverse separline">
                 <span class="iconsBackground">
-                    <span class="mbr-iconfont mobi-mbri-arrow-next mobi-mbri"></span>
+                    <span class="mbr-iconfont mobi-mbri-arrow-next mobi-mbri" style="color: rgb(245, 223, 77); fill: rgb(245, 223, 77);"></span>
                 </span>          
                 <div class="col-xs-12 col-md-6 align-left">
                     <div class="timeline-text-content">
@@ -152,7 +152,7 @@
             <!--2-->
             <div class="row timeline-element  separline">
                 <span class="iconsBackground">
-                    <span class="mbr-iconfont mobi-mbri-arrow-prev mobi-mbri"></span>
+                    <span class="mbr-iconfont mobi-mbri-arrow-next mobi-mbri" style="color: rgb(245, 223, 77); fill: rgb(245, 223, 77);"></span>
                 </span>
                 <div class="col-xs-12 col-md-6 align-left ">
                     <div class="timeline-text-content">
@@ -168,7 +168,7 @@
             <!--3-->
             <div class="row timeline-element reverse">
                 <span class="iconsBackground">
-                    <span class="mbr-iconfont mobi-mbri-arrow-next mobi-mbri"></span>
+                    <span class="mbr-iconfont mobi-mbri-arrow-next mobi-mbri" style="color: rgb(245, 223, 77); fill: rgb(245, 223, 77);"></span>
                 </span>
                 <div class="col-xs-12 col-md-6 align-left">
                     <div class="timeline-text-content">
